[package]
name = "areion"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = { version = "0.10.7", default-features = false, features = ["block-buffer", "core-api"] }

[dev-dependencies]
divan = "0.1.2"
expect-test = "1.4.1"
hex = "0.4.3"
hex-literal = "0.4.1"

[workspace]
members = ["benchmarks"]
