[package]
name = "areion"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = { version = "0.10.7", default-features = false, features = ["block-buffer", "core-api"] }
hex-literal = "0.4.1"

[dev-dependencies]
bolero = "0.10.1"
expect-test = "1.4.1"
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[workspace]
members = ["benchmarks"]
